--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link href="css/resCarousel.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./css/projects-style.css">
 
 </head>
 
@@ -318,7 +319,7 @@
             <article class="row">
 
                 <div class="container p8">
-                    <div class="resCarousel" data-items="2-4-4-4" data-slide="4" data-speed="900" data-animator="lazy">
+                    <div class="resCarousel" data-items="2-3-3-3" data-slide="3" data-speed="900" data-animator="lazy">
                         <div class="resCarousel-inner">
 
                             <div class="item">
@@ -327,18 +328,19 @@
                                         style="background: url('./images/projects/jkp_portal.png') center top no-repeat; background-size: cover; height: 100px;">
                                         <h1></h1>
                                     </div>
-                                    <h3> <a href="https://portal.jkpholdings.com/login" target="__blank"> JKP Portal
-                                        </a></h3>
-                                    <span style="font-family: Arial;">
-                                        <h4 title="Technologies used"> <b> Technologies </b>
-                                        </h4>
-                                        <ul style="font-size:13px; font-weight: bold; line-height: 1.5em;">
-                                            <li>LARAVEL (Events, Jobs and Queues)</li>
-                                            <li>REDIS, SOCKET.IO, LARAVEL ECHO</li>
-                                            <li style="font-weight: normal;">(Real Time Event Broadcasting)</li>
-                                            <li>HTML, CSS, BOOTSTRAP</li>
-                                            <li>MYSQL, REDIS</li>
+                                    <h3> <a href="https://portal.jkpholdings.com/login" target="__blank">
+                                            JKP Portal
+                                        </a>
+                                    </h3>
+                                    <span>
 
+                                        <ul>
+                                            <li> LARAVEL (Events Jobs
+                                                Queues) </li>
+                                            <li>REDIS & SOCKET.IO</li>
+                                            <li>LARAVEL ECHO SERVER</li>
+                                            <li>HTML CSS BOOTSTRAP</li>
+                                            <li>MYSQL</li>
                                         </ul>
                                         <strong>Google Geo Location API</strong>
                                         <br>
