Projects design finalized

--- a/index.html
+++ b/index.html
@@ -324,24 +324,22 @@
 
                             <div class="item">
                                 <div class="tile">
-                                    <div
-                                        style="background: url('./images/projects/jkp_portal.png') center top no-repeat; background-size: cover; height: 100px;">
-                                        <h1></h1>
-                                    </div>
                                     <h3> <a href="https://portal.jkpholdings.com/login" target="__blank">
                                             JKP Portal
                                         </a>
                                     </h3>
                                     <span>
-
-                                        <ul>
-                                            <li> LARAVEL (Events Jobs
-                                                Queues) </li>
-                                            <li>REDIS & SOCKET.IO</li>
-                                            <li>LARAVEL ECHO SERVER</li>
-                                            <li>HTML CSS BOOTSTRAP</li>
-                                            <li>MYSQL</li>
-                                        </ul>
+                                        <div
+                                            style="background: linear-gradient(rgba(0, 0, 0, 0.8) 100%, rgba(0, 0, 0, 0.8)100%), url('./images/projects/jkp_portal.png') center top no-repeat; background-size: cover;">
+                                            <ul>
+                                                <li> LARAVEL (Events Jobs
+                                                    Queues) </li>
+                                                <li>REDIS & SOCKET.IO</li>
+                                                <li>LARAVEL ECHO SERVER</li>
+                                                <li>HTML CSS BOOTSTRAP</li>
+                                                <li>MYSQL</li>
+                                            </ul>
+                                        </div>
                                         <strong>Google Geo Location API</strong>
                                         <br>
                                         <strong>Google Street View API</strong>
@@ -352,7 +350,7 @@
                                 </div>
                             </div>
 
-                            <div class="item">
+                            <div class=" item">
                                 <div class="tile">
                                     <div>
                                         <h1>2</h1>
