--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <article class="row">
 
                 <div class="container p8">
-                    <div class="resCarousel" data-items="2-3-3-3" data-slide="3" data-speed="900" data-animator="lazy">
+                    <div class="resCarousel" data-items="2-3-3-3" data-slide="2" data-speed="900" data-animator="lazy">
                         <div class="resCarousel-inner">
 
                             <div class="item">
@@ -329,7 +329,7 @@
                                         </a>
                                     </h3>
                                     <span>
-                                        <div
+                                        <div class="skills-list"
                                             style="background: linear-gradient(rgba(0, 0, 0, 0.8) 100%, rgba(0, 0, 0, 0.8)100%), url('./images/projects/jkp_portal.png') center top no-repeat; background-size: cover;">
                                             <ul>
                                                 <li> LARAVEL (Events Jobs
@@ -340,11 +340,16 @@
                                                 <li>MYSQL</li>
                                             </ul>
                                         </div>
-                                        <strong>Google Geo Location API</strong>
-                                        <br>
-                                        <strong>Google Street View API</strong>
+                                        
 
 
+                                    </span>
+
+                                    <span class="box-footer">
+                                        <ul>
+                                            <li>Google Geo Location API</li>
+                                            <li>Google Street View API</li>
+                                        </ul>
                                     </span>
 
                                 </div>
