--- a/index.html
+++ b/index.html
@@ -329,17 +329,19 @@
                                         </a>
                                     </h3>
                                     <span>
-                                        <div class="skills-list"
-                                            style="background: linear-gradient(rgba(0, 0, 0, 0.8) 100%, rgba(0, 0, 0, 0.8)100%), url('./images/projects/jkp_portal.png') center top no-repeat; background-size: cover;">
-                                            <ul>
-                                                <li> LARAVEL (Events Jobs
-                                                    Queues) </li>
-                                                <li>REDIS & SOCKET.IO</li>
-                                                <li>LARAVEL ECHO SERVER</li>
-                                                <li>HTML CSS BOOTSTRAP</li>
-                                                <li>MYSQL</li>
-                                            </ul>
-                                        </div>
+                                        <a href="https://portal.jkpholdings.com/login" target="__blank">
+                                            <div class="skills-list"
+                                                style="background: linear-gradient(rgba(0, 0, 0, 0.8) 100%, rgba(0, 0, 0, 0.8)100%), url('./images/projects/jkp_portal.png') center top no-repeat; background-size: cover;">
+                                                <ul>
+                                                    <li> LARAVEL (Events Jobs
+                                                        Queues) </li>
+                                                    <li>REDIS & SOCKET.IO</li>
+                                                    <li>LARAVEL ECHO SERVER</li>
+                                                    <li>HTML CSS BOOTSTRAP</li>
+                                                    <li>MYSQL</li>
+                                                </ul>
+                                            </div>
+                                        </a>
                                         
 
 
