20 mins completed of final changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
     <div class="container-fluid">
         <section class="row title-row">
-            <div class="fill-screen" style="background-image: url(./images/Coffee-Keyboard.jpg);">
+            <div class="fill-screen"
+                style="background-image: url(./images/Coffee-Keyboard.jpg); padding-top: 50px; background-position: center; background-repeat: no-repeat; background-size: cover;">
                 <img class="title img-circle img-responsive" src="./images/my-pic-removebg.jpg" alt="My Picture"
                     width="250px" height="250px">
                 <div class="title first-name">Muhammad <span class="last-name">Akhtar</span></div>
@@ -93,7 +94,8 @@
         </section>
 
         <section class="row">
-            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer.jpg)"></div>
+            <div class="no-show-mobile fil-screen fixed-attachment"
+                style="background-image: url(./images/Developer.jpg)"></div>
         </section>
 
         <section class="row" id="experience">
@@ -192,7 +194,8 @@
         </section>
 
         <section class="row">
-            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer-1.jpg)"></div>
+            <div class="no-show-mobile fil-screen fixed-attachment"
+                style="background-image: url(./images/Developer-1.jpg)"></div>
         </section>
 
         <section class="text-banner" id="skills">
@@ -307,7 +310,8 @@
         </section>
 
         <section class="row">
-            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Php.jpg)"></div>
+            <div class="no-show-mobile fil-screen fixed-attachment" style="background-image: url(./images/Php.jpg)">
+            </div>
         </section>
 
         <section class="row" id="projects">
@@ -342,9 +346,6 @@
                                                 </ul>
                                             </div>
                                         </a>
-
-
-
                                     </span>
 
                                     <span class="box-footer">
@@ -663,7 +664,8 @@
 
 
         <section class="row">
-            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Javascript.jpg)"></div>
+            <div class="no-show-mobile fil-screen fixed-attachment"
+                style="background-image: url(./images/Javascript.jpg)"></div>
         </section>
 
     </div>
