Mobile view issues fixed

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
                 <img class="title img-circle img-responsive" src="./images/my-pic-removebg.jpg" alt="My Picture"
                     width="250px" height="250px">
                 <div class="title first-name">Muhammad <span class="last-name">Akhtar</span></div>
+                <div class="title last-name first-name" id="small-name">Akhtar</div>
             </div>
         </section>
 
-        <section class="row" id="about">
+        <section class="row sections-area" id="about">
             <article class="sec-header">
                 <h3> <i class="fa fa-user"></i> About Me</h3>
                 <hr>
@@ -98,7 +99,7 @@
                 style="background-image: url(./images/Developer.jpg)"></div>
         </section>
 
-        <section class="row" id="experience">
+        <section class="row sections-area" id="experience">
             <article class="sec-header">
                 <h3> <i class="fa fa-history"></i> Experience <span class="badge badge-success">2 years+</span></h3>
                 <hr>
@@ -198,7 +199,7 @@
                 style="background-image: url(./images/Developer-1.jpg)"></div>
         </section>
 
-        <section class="text-banner" id="skills">
+        <section class="text-banner sections-area" id="skills">
             <article class="sec-header">
                 <h3> <i class="fa fa-cogs"></i> Skills</h3>
                 <hr>
@@ -314,16 +315,16 @@
             </div>
         </section>
 
-        <section class="row" id="projects">
+        <section class="row sections-area" id="projects">
             <article class="sec-header">
                 <h3>Projects</h3>
                 More Than 20 Projects And Restful API's I have worked on.
             </article>
             <hr>
-            <article class="row">
+            <article>
 
                 <div class="container p8">
-                    <div class="resCarousel" data-items="2-3-3-3" data-slide="2" data-speed="900" data-animator="lazy">
+                    <div class="resCarousel" data-items="1-2-2-3" data-slide="2" data-speed="900" data-animator="lazy">
                         <div class="resCarousel-inner">
 
                             <div class="item">
