Original  content insertion continues...

--- a/index.html
+++ b/index.html
@@ -78,23 +78,37 @@
                 <h3> <i class="fa fa-user"></i> <span class="hover-underline-animation">About Me</span></h3>
                 <hr>
             </article>
-            <article class="col-md-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
-                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
-                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
-                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
+            <article class="col-md-8">
+                <p>I have more than 3 years of experience in developing web applications using PHP and 
+                    its related frameworks(Laravel, and Codeigniter). In the past few years, I have developed 
+                    several websites, web applications, customized WordPress plugins, and integrated
+                    third-party packages and APIs for companies.
+                </p>
+
+                <p>I’m responsible for managing back-end services and data interchange between the server and
+                    the front end. My primary focus will be the development of all the server-side logic, 
+                    definition, implementation in server-side language and maintenance of the central database, 
+                    and ensuring high performance and responsiveness to the request from the front-end.
+                </p>
+                <p>I can take an existing application and can fix bugs, and implement new features without 
+                    disturbing the flows and features in an existing application. 
+                </p>
+                <p> I have the ability to design scalable databases, write/optimize queries, and required 
+                    knowledge of front-end technologies as well. 
+                </p>
+                <p>I use git for version control and team collaboration. An agile/scrum methodology practitioner. Worked on tools like Jira and Trello.</p>
             </article>
-            <article class="col-md-6 table-custom">
+            <article class="col-md-4 table-custom">
                 <dl class="dl-horizontal">
                     <dt>Email</dt>
                     <dd> akhtarm821@gmail.com</dd>
                     <dt>Mobile</dt>
                     <dd>+92 309 8638327</dd>
                     <dt>LinkedIn</dt>
-                    <dd>akhtarm821@gmail.com</dd>
+                    <dd>https://www.linkedin.com/in/muhammad-akhtar-47b1a4102/</dd>
                 </dl>
                 <div class="social">
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/muhammad-akhtar-47b1a4102/"><i class="fa fa-linkedin"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-github"></i></a>
                     <a href="#"><i class="fa fa-codepen"></i></a>
@@ -109,7 +123,7 @@
 
         <section class="row sections-area" id="experience">
             <article class="sec-header">
-                <h3> <i class="fa fa-history"></i> <span>Experience</span> <b class="badge badge-success">2
+                <h3> <i class="fa fa-history"></i> <span>Experience</span> <b class="badge badge-success">3
                         years+</b></h3>
                 <hr>
             </article>
@@ -325,6 +339,42 @@
         </section>
 
         <section class="row sections-area" id="projects">
+            <article class="sec-header">
+                <h3><i class="fa fa-code"></i> <span>Projects</span></h3>
+                Worked on more than 20 Projects And Restful API's. Given below is the detail.
+            </article>
+            <article class="row">
+                <div
+                    class="box box-slim col-xs-8 col-md-offset-2 col-md-8 col-md-offset-2 col-lg-offset-4 col-lg-8 col-lg-offset-4">
+                    <h6>Title</h6>
+                    <p class="small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit
+                        porro
+                        nisi qui nesciunt
+                        praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic
+                        impedit!</p>
+                </div>
+                <div
+                    class="box box-slim col-xs-8 col-md-offset-2 col-md-8 col-md-offset-2 col-lg-offset-4 col-lg-8 col-lg-offset-4">
+                    <h6>Title</h6>
+                    <p class="small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit
+                        porro
+                        nisi qui nesciunt
+                        praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic
+                        impedit!</p>
+                </div>
+                <div
+                    class="box box-slim col-xs-8 col-md-offset-2 col-md-8 col-md-offset-2 col-lg-offset-4 col-lg-8 col-lg-offset-4">
+                    <h6>Title</h6>
+                    <p class="small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit
+                        porro
+                        nisi qui nesciunt
+                        praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic
+                        impedit!</p>
+                </div>
+            </article>
+        </section>
+
+        <!-- <section class="row sections-area" id="projects">
             <article class="sec-header">
                 <h3><i class="fa fa-code"></i> <span>Projects</span></h3>
                 More Than 20 Projects And Restful API's I have worked on.
@@ -635,7 +685,7 @@
                     </div>
                 </div>
 
-            </article>
+            </article> -->
 
             <!-- <article class="row">
                 <div
@@ -666,7 +716,7 @@
                         impedit!</p>
                 </div>
             </article> -->
-        </section>
+        <!-- </section> -->
 
 
 
@@ -684,7 +734,7 @@
         <div class="">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="footer-copyright" style="box-sizing: border-box; float:left; margin-top: 6px;">
-                <span class="small-text"> &copy; 2022 Copyright Muhammad Akhtar</span>
+                <span class="small-text"> &copy; 2023 Copyright Muhammad Akhtar</span>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
