skills section content added

--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
                 <hr>
             </article>
             <article class="col-md-8">
-                <p>I have more than 3 years of experience in developing web applications using PHP and 
-                    its related frameworks(Laravel, and Codeigniter). In the past few years, I have developed 
+                <p>Highly skilled web developer with 4 years of experience in PHP and related frameworks. Seeking a challenging position 
+                    where I can utilize my technical expertise to contribute to the success of a dynamic organization. In the past few years, 
+                    I have developed 
                     several websites, web applications, customized WordPress plugins, and integrated
                     third-party packages and APIs for companies.
                 </p>
@@ -89,15 +90,15 @@
                 <p>I’m responsible for managing back-end services and data interchange between the server and
                     the front end. My primary focus will be the development of all the server-side logic, 
                     definition, implementation in server-side language and maintenance of the central database, 
-                    and ensuring high performance and responsiveness to the request from the front-end.
-                </p>
-                <p>I can take an existing application and can fix bugs, and implement new features without 
-                    disturbing the flows and features in an existing application. 
+                    and ensuring high performance and responsiveness to the request from the front-end. I have the 
+                    ability to optimize application performance and troubleshoot complex issues. Provided technical support and 
+                    troubleshooting assistance to clients and end-users.
                 </p>
                 <p> I have the ability to design scalable databases, write/optimize queries, and required 
                     knowledge of front-end technologies as well. 
                 </p>
-                <p>I use git for version control and team collaboration. An agile/scrum methodology practitioner. Worked on tools like Jira and Trello.</p>
+                <p>Participated in agile development processes, including sprint planning, daily stand-ups, and retrospective meetings.</p>
+                <p>I use git for version control and team collaboration.</p>
             </article>
             <article class="col-md-4 table-custom">
                 <dl class="dl-horizontal">
@@ -288,8 +289,8 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="skill-tech">
                         <h4> <i class="fa fa-globe"></i> Web Development</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
-                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                        <p>Collaborated with cross-functional teams to design and implement web applications, ensuring optimal performance and user experience. 
+                        </p>
                     </div>
                 </div>
 
@@ -297,17 +298,15 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="skill-tech">
                         <h4><i class="fa fa-database"></i> Database</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
-                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                        <p>Proficiency in database management systems such as MySQL. Created and optimized database structures for efficient data storage and retrieval.</p>
                     </div>
                 </div>
 
                 <div class="col-md-6 col-sm-6">
                     <div class="skill-tech">
-                        <h4><img src="./icons/api.png" alt="" width="32" height="32"> Restful API's
+                        <h4><img src="./icons/api.png" alt="" width="32" height="32"> API's
                         </h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
-                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                        <p>Experience with RESTful API development and integration. Integrated third-party APIs for payment gateways, social media platforms, and other services.</p>
                     </div>
                 </div>
 
@@ -315,8 +314,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="skill-tech">
                         <h4> <i class="fa fa-code"></i> Coding</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
-                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                        <p>Conducted code reviews and implemented best practices to maintain code quality and consistency.</p>
                     </div>
                 </div>
 
